--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#050925</color>
+    <color name="colorPrimary">#00ffffff</color>
     <color name="colorPrimaryDark">#161821</color>
     <color name="colorAccent">#a6ff40</color>
     <color name="gray">#ececec</color>
