v 1.3. Task 3.2 Added all tasks

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="colorPrimaryDark">#161821</color>
     <color name="colorAccent">#a6ff40</color>
     <color name="gray">#ececec</color>
+    <color name="gray_transp">#791e1818</color>
     <color name="white">#ffffff</color>
 </resources>
