--- a/app/src/main/res/drawable/background_splash.xml
+++ b/app/src/main/res/drawable/background_splash.xml
@@ -9,7 +9,9 @@
             android:src="@drawable/mapbook" />
     </item>
 
-    <item android:bottom="60dp">
+    <item
+        android:height="40dp"
+        android:bottom="60dp">
         <bitmap
             android:gravity="bottom"
             android:src="@drawable/ganomad" />
