--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:mapbox="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="@color/white"
+    android:gravity="bottom">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:elevation="15dp"
-        android:src="@drawable/mapbook" />
     <com.mapbox.mapboxsdk.maps.MapView
         android:id="@+id/mapView"
         android:layout_width="match_parent"
@@ -16,6 +13,68 @@
         mapbox:mapbox_cameraTargetLat="41.3851"
         mapbox:mapbox_cameraTargetLng="2.1734"
         mapbox:mapbox_cameraZoom="11"
-        mapbox:mapbox_styleUrl="mapbox://styles/mapbox/dark-v9" />
+        mapbox:mapbox_styleUrl="mapbox://styles/mapbox/dark-v9">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="wrap_content"
+            android:layout_height="44dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="22dp"
+            android:background="@color/gray_transp"
+            android:elevation="15dp"
+            android:src="@drawable/mapbook" />
+    </com.mapbox.mapboxsdk.maps.MapView>
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/venue_detail_overlap"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="false"
+        android:layout_marginBottom="3dp"
+        android:background="@color/gray_transp"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/venue_detail_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="14dp"
+            android:gravity="center_horizontal|bottom"
+            android:textColor="@color/mapbox_blue"
+            android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/venue_detail_info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="14dp"
+            android:gravity="center_horizontal|bottom"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
+
+        <ImageView
+            android:id="@+id/venue_detail_book"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="12dp"
+            android:elevation="15dp"
+            android:gravity="center_vertical|center_horizontal"
+            android:src="@drawable/book" />
+
+        <ImageView
+            android:id="@+id/venue_detail_cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="12dp"
+            android:elevation="15dp"
+            android:gravity="center_vertical|center_horizontal"
+            android:src="@drawable/cancel"
+            android:visibility="gone" />
+
+    </LinearLayout>
 
 </RelativeLayout>
