--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -17,7 +17,7 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="44dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="22dp"
@@ -68,13 +68,12 @@
         <ImageView
             android:id="@+id/venue_detail_cancel"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="25dp"
             android:layout_marginBottom="12dp"
             android:elevation="15dp"
             android:gravity="center_vertical|center_horizontal"
             android:src="@drawable/cancel"
             android:visibility="gone" />
-
     </LinearLayout>
 
 </RelativeLayout>
